[gd_scene load_steps=2 format=3 uid="uid://options001"]

[ext_resource type="Script" path="res://systems/scripts/OptionsMenu.gd" id="1"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="LabelTitre" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "OPTIONS"
horizontal_alignment = 1

[node name="LabelVolumeMaster" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Volume Master"

[node name="SliderVolumeMaster" type="HSlider" parent="Panel/VBoxContainer"]
layout_mode = 2
min_value = -30.0
max_value = 0.0
value = -10.0

[node name="LabelVolumeMusique" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Volume Musique"

[node name="SliderVolumeMusique" type="HSlider" parent="Panel/VBoxContainer"]
layout_mode = 2
min_value = -30.0
max_value = 0.0
value = -10.0

[node name="LabelVolumeSFX" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Volume SFX"

[node name="SliderVolumeSFX" type="HSlider" parent="Panel/VBoxContainer"]
layout_mode = 2
min_value = -30.0
max_value = 0.0
value = -10.0

[node name="CheckFullscreen" type="CheckBox" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Plein Écran"

[node name="BoutonSupprimerSave" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
text = "⚠️ Supprimer Sauvegarde"

[node name="BoutonRetour" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Retour"
